// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render common use case 1`] = `
<section
  className="Section white"
  style={Object {}}
>
  <h2
    className="Heading secondary headingLines"
    id=""
  >
    Test 2
  </h2>
  <div
    className="content undefined"
  >
    Test Children 3
  </div>
</section>
`;

exports[`Section should render with many props assigned 1`] = `
<section
  className="testing-123 Section gray"
  style={
    Object {
      "color": "navy",
    }
  }
>
  <h2
    className="Heading secondary"
    id="test-1"
  >
    Test
  </h2>
  <div
    className="content TestClassName"
  >
    Test Children 2
  </div>
</section>
`;

exports[`Section should render with required props 1`] = `
<section
  className="Section gray"
  style={Object {}}
>
  
  <div
    className="content undefined"
  >
    Test Children
  </div>
</section>
`;
